refined plots and results reporting

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -391,24 +391,24 @@ For data from experiments 4a and 4b, we further examined whether the self-refere
 
 To test whether moral characters are prioritized, we modeled data from experiments 1a, 1b, 1c, 2, 5, and 6a with three-level Bayesian hierarchical models. All these experiments shared similar designs and can be used for testing the prioritization effect of moral character. The valid and unique sample size is 192. Note that for both experiments 1a and 1b, two datasets were collected at different time points and locations, thus we treated them as independent samples. Here we only reported the population-level results of three-level Bayesian models, the detailed results of each experiment can be found in supplementary materials.
 
-For the \emph{d} prime, results from the Bayesian model revealed a robust effect of moral character. Shapes associated with good characters (``good person'', ``kind person'' or a name associated with good behaviors) have higher sensitivity (median = 2.51, 95\% HDI = {[}2.23 2.78{]}) than shapes associated with neutral characters (median = 2.19, 95\% HDI = {[}1.88 2.50{]}), \(median_{diff}\) = 0.31, 95\% HDI {[}0.00 0.64{]}, but we did not find differences between shapes associated with bad characters (median = 2.25, 95\% HDI = {[}1.94 2.55{]}) and neutral character, \(median_{diff}\) = 0.05, 95\% HDI {[}-0.28 0.39{]}.
+For the \emph{d} prime, results from the Bayesian model revealed a robust effect of moral character. Shapes associated with good characters (``good person'', ``kind person'' or a name associated with good behaviors) have higher sensitivity (median = 2.51, 95\% HDI = {[}2.23 2.78{]}) than shapes associated with neutral characters (median = 2.19, 95\% HDI = {[}1.88 2.50{]}), the difference (\(median_{diff}\) = 0.31, 95\% HDI {[}0, 0.62{]}) has a 97.31\% probability of being positive (\textgreater{} 0), 94.91\% of being significant (\textgreater{} 0.05). But we did not find difference between shapes associated with bad characters (median = 2.25, 95\% HDI = {[}1.94 2.55{]}) and neutral character, the difference (\(median_{diff}\) = 0.05, 95\% HDI {[}-0.27, 0.38{]}) only has a 60.56\% probability of being positive (\textgreater{} 0), 49.34\% of being significant (\textgreater{} 0.05).
 
 \begin{figure}
 \centering
 \includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-bayes-meta-1-1.pdf}
-\caption{\label{fig:plot-bayes-meta-1}Effect of moral character on RT and d'}
+\caption{\label{fig:plot-bayes-meta-1}Effect of moral character on perceptual matching}
 \end{figure}
 
-The results from reaction times data also found a robust effect of moral character for both match trials (see figure \ref{fig:plot-bayes-meta-1} C) and nonmatch trials (\textbf{see supplementary materials}). For match trials, shapes associated with good characters were faster (median = 579 ms, 95\% HDI = {[}500 661{]}) than shapes associated with neutral characters (median = 624 ms, 95\% HDI = {[}543 711{]}), \(median_{diff}\) = -44, 95\% HDI {[}-60 -30{]}. We also found that RTs to shapes associated with bad characters (median = 641 ms, 95\% HDI = {[}561 730{]}) were slower as compared to the neutral character, \(median_{diff}\) = 17, 95\% HDI {[}3 30{]}.
+The results from reaction times data also found a robust effect of moral character for both match trials (see figure \ref{fig:plot-bayes-meta-1} C) and nonmatch trials (\textbf{see supplementary materials}). For match trials, shapes associated with good characters were faster (median = 579 ms, 95\% HDI = {[}500 661{]}) than shapes associated with neutral characters (median = 624 ms, 95\% HDI = {[}543 711{]}), the effect (\(median_{diff}\) = -44, 95\% HDI {[}-67, -24{]}) has a 99.94\% probability of being negative (\textless{} 0), 99.94\% of being significant (\textless{} -0.05). We also found that RTs to shapes associated with bad characters (median = 641 ms, 95\% HDI = {[}561 730{]}) were slower as compared to the neutral character, the effect (\(median_{diff}\) = 17, 95\% HDI {[}-6, 36{]}) has a 93.58\% probability of being positive (\textgreater{} 0), 93.55\% of being significant (\textgreater{} 0.05).
 
-For the nonmatch trials, we found the advantage of good character: Shapes associated with good characters (median = 654 ms, 95\% HDI = {[}573 743{]}) were faster than shapes associated with neutral characters (median = 672 ms, 95\% HDI = {[}588 763{]}), \(median_{diff}\) = -18 ms, 95\% HDI {[}-25 -11{]}. Similarly, the shapes associated with bad characters (median = 677 ms, 95\% HDI = {[}590 766{]}) were slower than shapes associated with neutral characters, \(median_{diff}\) = 5 ms, 95\% HDI {[}0 11{]}, but the effect size was smaller than the match trials.
+For the nonmatch trials, we found similar pattern but much smaller effect size. Shapes associated with good characters (median = 654 ms, 95\% HDI = {[}573 743{]}) were faster than shapes associated with neutral characters (median = 672 ms, 95\% HDI = {[}588 763{]}), the difference (\(median_{diff}\) = -18, 95\% HDI {[}-27, -8{]}) has a 99.91\% probability of being negative (\textless{} 0), 99.91\% of being significant (\textless{} -0.05). In contrast, the shapes associated with bad characters (median = 677 ms, 95\% HDI = {[}590 766{]}) were slower than shapes associated with neutral characters, the effect (\(median_{diff}\) = 5, 95\% HDI {[}-3, 13{]}) has a 92.43\% probability of being positive (\textgreater{} 0), 92.31\% of being significant (\textgreater{} 0.05).
 
 \hypertarget{modulation-effect-self-referential-processing}{%
 \subsection{Modulation effect self-referential processing}\label{modulation-effect-self-referential-processing}}
 
 To test the modulation effect of self-referential processing, we also modeled data from three experiments (3a, 3b, and 6b) with three-level Bayesian models. These three experiments included 108 unique participants. We focused on the population-level effect of the interaction between self-referential processing and moral valence. Also, we examined the differences of differences, i.e., how the differences between good/bad characters and the neutral character under the self-referential conditions differ from that under other-referential conditions. The detailed results of each experiment can be found in supplementary materials.
 
-For the \emph{d} prime, we found an interaction between the moral valence and self-referential processing: the good-neutral differences are larger for the self-referential condition than for the other-referential condition: The difference (\(median_{diff}\) = 0.48, 95\% HDI {[}-0.62, 1.65{]}) has a 93.04\% probability of being positive (\textgreater{} 0), 91.92\% of being significant (\textgreater{} 0.05). However, the bad-neutral differences (\(median_{diff}\) = 0.0087, 95\% CI {[}-0.96, 1.00{]}) only has a 51.85\% probability of being positive (\textgreater{} 0), 41.29\% of being significant (\textgreater{} 0.05). Further analyses revealed that the prioritization effect of good character (as compared to neutral) only appeared for self-referential conditions but not other-referential conditions. The estimated \emph{d} prime for good-self was greater than neutral-self (\(median_{diff}\) = 0.54, 95\% CI {[}-0.30, 1.41{]}), with a 95.99\% probability of being positive (\textgreater{} 0), 95.36\% of being significant (\textgreater{} 0.05). The differences between bad-self and neutral-self, good-other and neutral-other, and bad-other and neutral-other are all centered around zero (see Figure \ref{fig:plot-bayes2}, B, D).
+For the \emph{d} prime, we found an interaction between the moral valence and self-referential processing: the good-neutral differences are larger for the self-referential condition than for the other-referential condition: The difference (\(median_{diff}\) = 0.48, 95\% HDI {[}-0.62, 1.65{]}) has a 93.04\% probability of being positive (\textgreater{} 0), 91.92\% of being significant (\textgreater{} 0.05). However, the bad-neutral differences (\(median_{diff}\) = 0.0087, 95\% HDI {[}-0.96, 1.00{]}) only has a 51.85\% probability of being positive (\textgreater{} 0), 41.29\% of being significant (\textgreater{} 0.05). Further analyses revealed that the prioritization effect of good character (as compared to neutral) only appeared for self-referential conditions but not other-referential conditions. The estimated \emph{d} prime for good-self was greater than neutral-self (\(median_{diff}\) = 0.54, 95\% HDI {[}-0.30, 1.41{]}), with a 95.99\% probability of being positive (\textgreater{} 0), 95.36\% of being significant (\textgreater{} 0.05). The differences between bad-self and neutral-self, good-other and neutral-other, and bad-other and neutral-other are all centered around zero (see Figure \ref{fig:plot-bayes2}, B, D).
 
 \begin{figure}
 \centering
@@ -416,7 +416,7 @@ For the \emph{d} prime, we found an interaction between the moral valence and se
 \caption{\label{fig:plot-bayes2}Interaction between moral character and self-referential}
 \end{figure}
 
-For the RTs of matched trials, we also found an interaction between moral valence and self-referential processing: the good-neutral differences were different for the self- and other-referential conditions (\(median_{diff}\) = -155.11; 95\% HDI = {[}-755.36 395.38{]}). However, this was not the case for bad-neutral differences (\(median_{diff}\) = -55.63; 95\% HDI = {[}-604.70 561.00{]}). Further analyses revealed a robust good-self prioritization effect as compared to neutral-self (\(median_{diff}\) = -57.91; 95\% HDI = {[}-224.43 41.14{]}) and good-other (\(median_{diff}\) = -107.21; 95\% HDI = {[}-369.05 92.95{]}) conditions. Similar to the results of \emph{d'}, we found that participants responded slower for both good character and bad character than for the neutral character when they referred to others. See Figure \ref{fig:plot-bayes2}.
+For the RTs of matched trials, we also found an interaction between moral valence and self-referential processing: the good-neutral differences were larger for the self- than the other-referential conditions (\(median_{diff}\) = -148, 95\% HDI {[}-413, 73{]}) has a 96.05\% probability of being negative (\textless{} 0), 96.05\% of being significant (\textless{} -0.05). However, this pattern was much weaker for bad-neutral differences (\(median_{diff}\) = -47, 95\% HDI {[}-280, 182{]}) has a 79.91\% probability of being negative (\textless{} 0), 79.88\% of being significant (\textless{} -0.05). Bayes analyses revealed a robust good-self prioritization effect as compared to neutral-self (\(median_{diff}\) = -59, 95\% HDI {[}-115, -22{]}) has a 98.87\% probability of being negative (\textless{} 0), 98.87\% of being significant (\textless{} -0.05)) and good-other (\(median_{diff}\) = -109, 95\% HDI {[}-227, -31{]}) has a 98.65\% probability of being negative (\textless{} 0), 98.65\% of being significant (\textless{} -0.05)) conditions. Similar to the results of \emph{d'}, we found that participants responded slower for both good character than for the neutral character when they referred to others, \(median_{diff}\) = 85.01, 95\% HDI {[}-112, 328{]}) has a 92.16\% probability of being positive (\textgreater{} 0), 92.15\% of being significant (\textgreater{} 0.05). A similar pattern was also found for bad character when refereed to others: bad-other was responded slower than neutral-other, \(median_{diff}\) = 44, 95\% HDI {[}-146, 268{]}) has a 80.03\% probability of being positive (\textgreater{} 0), 79.99\% of being significant (\textgreater{} 0.05). See Figure \ref{fig:plot-bayes2}.
 
 These results suggested that the prioritization of good character is not solely driven by the valence of moral character. Instead, the self-referential processing modulated the prioritization of good character: good character was prioritized only when it was self-referential. When the moral character was other-referential, responses to both good and bad characters were slowed down.
 
@@ -427,13 +427,13 @@ Experiments 4a and 4b were designed to test whether the good character and self-
 
 In experiment 4a, where ``self'' vs.~``other'' were task-relevant and moral character were task-irrelevant, we found the ``self'' conditions performed better than the ``other'' conditions for both \emph{d} prime and reaction times. This pattern is consistent with previous studies (e.g., Sui et al. (2012)).
 
-More importantly, we found evidence, albeit weak, that task-irrelevant moral character also played a role. For shapes associated with ``self'', \emph{d'} was greater when shapes had a good character inside (median = 2.83, 95\% HDI {[}2.63 3.01{]}) than shapes that have neutral character (median = 2.74, 95\% HDI {[}2.58 2.95{]}), the difference (median = 0.08, 95\% HDI {[}-0.10, 0.27{]}) has a 81.60\% probability of being positive (\textgreater{} 0), 64.33\% of being significant (\textgreater{} 0.05). For shapes associated with ``other'', the pattern reversed: \emph{d} prime was smaller when shapes had a good character inside (median = 1.87, 95\% HDI {[}1.71 2.04{]}) than had neutral (median = 1.96, 95\% HDI {[}1.80 2.14{]}), the difference (median = -0.09, 95\% CI {[}-0.25, 0.05{]}) has a 89.03\% probability of being negative (\textless{} 0), 71.38\% of being significant (\textless{} -0.05). The difference between theses two effects (median = 0.18, 95\% CI {[}-0.06, 0.43{]}) has a 92.88\% probability of being positive (\textgreater{} 0), 85.08\% of being significant (\textgreater{} 0.05). See Figure \ref{fig:plot-exp4-all}.
+More importantly, we found evidence, albeit weak, that task-irrelevant moral character also played a role. For shapes associated with ``self'', \emph{d'} was greater when shapes had a good character inside (median = 2.83, 95\% HDI {[}2.63 3.01{]}) than shapes that have neutral character (median = 2.74, 95\% HDI {[}2.58 2.95{]}), the difference (median = 0.08, 95\% HDI {[}-0.10, 0.27{]}) has a 81.60\% probability of being positive (\textgreater{} 0), 64.33\% of being significant (\textgreater{} 0.05). For shapes associated with ``other'', the pattern reversed: \emph{d} prime was smaller when shapes had a good character inside (median = 1.87, 95\% HDI {[}1.71 2.04{]}) than had neutral (median = 1.96, 95\% HDI {[}1.80 2.14{]}), the difference (median = -0.09, 95\% HDI {[}-0.25, 0.05{]}) has a 89.03\% probability of being negative (\textless{} 0), 71.38\% of being significant (\textless{} -0.05). The difference between theses two effects (median = 0.18, 95\% HDI {[}-0.06, 0.43{]}) has a 92.88\% probability of being positive (\textgreater{} 0), 85.08\% of being significant (\textgreater{} 0.05). See Figure \ref{fig:plot-exp4-all}.
 
-A similar pattern was found for RTs in matched trials. For the ``self'' condition, when a good character was presented inside the shapes, the RTs (median = 641, 95\% HDI {[}623 662{]}) were faster than when a neutral character (median = 649, 95\% HDI {[}631 668{]}) were inside, the effect (median = -7.87, 95\% CI {[}-17.49, 2.00{]}) has a 94.55\% probability of being negative (\textless{} 0), 94.50\% of being significant (\textless{} -0.05), and 93.97\% of being large (\textless{} -0.30). In contrast, RTs for shapes associated with good character inside (median = 733, 95\% HDI {[}711 755{]}) were slower than those with neutral character (median = 722, 95\% HDI {[}702 741{]}) inside, the effect (median = 11.64, 95\% CI {[}-3.99, 27.83{]}) has a 93.00\% probability of being positive (\textgreater{} 0), 92.83\% of being significant (\textgreater{} 0.05), and 92.40\% of being large (\textgreater{} 0.30). The difference between the effects (median = -19.46, 95\% CI {[}-42.93, 3.72{]}) has a 94.90\% probability of being negative (\textless{} 0), 94.88\% of being significant (\textless{} -0.05), and 94.58\% of being large (\textless{} -0.30).
+A similar pattern was found for RTs in matched trials. For the ``self'' condition, when a good character was presented inside the shapes, the RTs (median = 641, 95\% HDI {[}623 662{]}) were faster than when a neutral character (median = 649, 95\% HDI {[}631 668{]}) were inside, the effect (median = -7.87, 95\% HDI {[}-17.49, 2.00{]}) has a 94.55\% probability of being negative (\textless{} 0), 94.50\% of being significant (\textless{} -0.05), and 93.97\% of being large (\textless{} -0.30). In contrast, RTs for shapes associated with good character inside (median = 733, 95\% HDI {[}711 755{]}) were slower than those with neutral character (median = 722, 95\% HDI {[}702 741{]}) inside, the effect (median = 11.64, 95\% HDI {[}-3.99, 27.83{]}) has a 93.00\% probability of being positive (\textgreater{} 0), 92.83\% of being significant (\textgreater{} 0.05), and 92.40\% of being large (\textgreater{} 0.30). The difference between the effects (median = -19.46, 95\% HDI {[}-42.93, 3.72{]}) has a 94.90\% probability of being negative (\textless{} 0), 94.88\% of being significant (\textless{} -0.05), and 94.58\% of being large (\textless{} -0.30).
 
 In experiment 4b, where moral characters were task-relevant and ``self'' vs ``other'' were task-irrelevant, we found a main effect of moral character: performance for shapes associated with good characters was better than other-related conditions on both \emph{d'} and reaction times. This pattern, again, shows a robust prioritization effect of good character.
 
-Most importantly, we found evidence that task-irrelevant labels, ``self'' or ``other'', also played a role. For shapes associated with good character, the \emph{d} prime was greater when shapes had a ``self'' inside than with ``other'' inside (\(mean_{diff}\) = 0.14, 95\% CI {[}-0.05, 0.34{]}) has a 92.35\% probability of being positive (\textgreater{} 0), 81.80\% of being significant (\textgreater{} 0.05). However, the difference did not occur when the target shape where associated with ``neutral'' (\(mean_{diff}\) = 0.04, 95\% HDI {[}-0.13, 0.22{]}) has a 67.20\% probability of being positive (\textgreater{} 0), 44.80\% of being significant (\textgreater{} 0.05). Neither for the ``bad'' person condition: \(mean_{diff}\) = 0.10, 95\% HDI {[}-0.16, 0.37{]}) has a 77.03\% probability of being positive (\textgreater{} 0), 64.62\% of being significant (\textgreater{} 0.05).
+Most importantly, we found evidence that task-irrelevant labels, ``self'' or ``other'', also played a role. For shapes associated with good character, the \emph{d} prime was greater when shapes had a ``self'' inside than with ``other'' inside (\(mean_{diff}\) = 0.14, 95\% HDI {[}-0.05, 0.34{]}) has a 92.35\% probability of being positive (\textgreater{} 0), 81.80\% of being significant (\textgreater{} 0.05). However, the difference did not occur when the target shape where associated with ``neutral'' (\(mean_{diff}\) = 0.04, 95\% HDI {[}-0.13, 0.22{]}) has a 67.20\% probability of being positive (\textgreater{} 0), 44.80\% of being significant (\textgreater{} 0.05). Neither for the ``bad'' person condition: \(mean_{diff}\) = 0.10, 95\% HDI {[}-0.16, 0.37{]}) has a 77.03\% probability of being positive (\textgreater{} 0), 64.62\% of being significant (\textgreater{} 0.05).
 
 \begin{figure}
 \centering
@@ -441,7 +441,7 @@ Most importantly, we found evidence that task-irrelevant labels, ``self'' or ``o
 \caption{\label{fig:plot-exp4-all}Experiment 4: Implicit binding between good character and the self.}
 \end{figure}
 
-The same trend appeared for the RT data. For shapes associated with good character, having a ``self'' inside shapes reduced the reaction times as compared to having an ``other'' inside the shapes (\(mean_{diff}\) = -55.10, 95\% CI {[}-75.27, -35.11{]}) has a 100\% probability of being negative (\textless{} 0), 100.00\% of being significant (\textless{} -0.05). However, when the shapes were associated neutral character, having a ``self'' inside shapes increased the RTs: \(mean_{diff}\) = 10.88, 95\% CI {[}0.67, 20.84{]}) has a 98.20\% probability of being positive (\textgreater{} 0), 98.15\% of being significant (\textgreater{} 0.05). While having ``self'' slightly increased the RT than having ``other'' inside the shapes for the bad character: \(mean_{diff}\) = 5.39, 95\% CI {[}-16.59, 27.37{]}) has a 69.45\% probability of being positive (\textgreater{} 0), 69.27\% of being significant (\textgreater{} 0.05), See Figure \ref{fig:plot-exp4-all}.
+The same trend appeared for the RT data. For shapes associated with good character, having a ``self'' inside shapes reduced the reaction times as compared to having an ``other'' inside the shapes (\(mean_{diff}\) = -55.10, 95\% HDI {[}-75.27, -35.11{]}) has a 100\% probability of being negative (\textless{} 0), 100.00\% of being significant (\textless{} -0.05). However, when the shapes were associated neutral character, having a ``self'' inside shapes increased the RTs: \(mean_{diff}\) = 10.88, 95\% HDI {[}0.67, 20.84{]}) has a 98.20\% probability of being positive (\textgreater{} 0), 98.15\% of being significant (\textgreater{} 0.05). While having ``self'' slightly increased the RT than having ``other'' inside the shapes for the bad character: \(mean_{diff}\) = 5.39, 95\% HDI {[}-16.59, 27.37{]}) has a 69.45\% probability of being positive (\textgreater{} 0), 69.27\% of being significant (\textgreater{} 0.05), See Figure \ref{fig:plot-exp4-all}.
 
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
