--- a/general_method.rmd
+++ b/general_method.rmd
@@ -21,7 +21,7 @@ exp_table <- read.csv('Exp_info_all.csv') %>%
 apa_table(
   exp_table
   , caption = "Information about all experiments."
-  , note = "Stim of Morality = How moral character was manipulated; Presenting order = how shapes & labels were presented. The data from experiments 7a & 7b, which were reported in Hu et al (2020), are only included in the meta-analysis in supplementary materials."
+  , note = "Stim of Morality = How moral character was manipulated; Presenting order = how shapes & labels were presented. The data from experiments 7a & 7b, which were reported in Hu et al (2020), are not analyzed here."
   , escape = TRUE
 )
 ```
@@ -95,13 +95,13 @@ Note that for experiments 3a, 3b, and 6b, the three-level model for reaction tim
 
 
 ### Testing hypotheses
-To test hypotheses, we used the Sequential Effect eXistence and sIgnificance Testing (SEXIT) framework suggested by @makowski_indices_2019. In this approach, we directly use the posterior distributions of model parameters or other effect that can derived from posterior distributions. The SEXIT approach reports centrality, uncertainty, existence, significance, and size of the input posterior, which is intuitive for making statistical inference. We used `bayestestR` for implementing this approach [@makowski_bayestestr_2019].
+To test hypotheses, we used the Sequential Effect eXistence and sIgnificance Testing (SEXIT) framework suggested by @makowski_indices_2019. In this approach, we directly use the posterior distributions of model parameters or other effects that can be derived from posterior distributions. The SEXIT approach reports centrality, uncertainty, existence, significance, and size of the input posterior, which is intuitive for making statistical inferences. We used `bayestestR` for implementing this approach [@makowski_bayestestr_2019]. Following the SEXIT framework, we reported the median of the posterior distribution and its 95% HDI (Highest Density Interval), along the probability of direction (pd), the probability of significance. The thresholds beyond which the effect is considered as significant (i.e., non-negligible).
 
 #### Prioritization of moral character
-We tested whether moral characters are prioritized by examining the population-level effects (also called fixed effect) of the three-level Bayesian hierarchical model of experiments 1a, 1b, 1c, 2, 5, and 6a. More specifically, we calculated the difference between the posterior distributions of the good/bad character and the neutral character and tested the posteriors with the SEXIT approach. Following the SEXIT framework, we report the median of the posterior distribution and its 95% CI (Highest Density Interval), along the probability of direction (pd), the probability of significance and the probability of being large. The thresholds beyond which the effect is considered as significant (i.e., non-negligible) and large are |0.05| and |0.30|.
+We tested whether moral characters are prioritized by examining the population-level effects (also called fixed effect) of the three-level Bayesian hierarchical model of experiments 1a, 1b, 1c, 2, 5, and 6a. More specifically, we calculated the differences between the posterior distributions of the good/bad character and the neutral character and then tested these posterior distributions with the SEXIT approach. 
 
 #### Modulation of self-referential processing
-We tested the modulation effect of self-referential processing by examining the interaction between moral character and self-referential process for the three-level Bayesian hierarchical model of experiments 3a, 3b, and 6b. More specifically, we tested two possible explanations for the prioritization of good character: the valence effect alone or an interaction between the valence effect and the self-referential process. If the former is correct, then there will be no interaction between moral character and self-referential processing, i.e., the prioritization effect exhibits a similar pattern for both self- and other-referential conditions. On the other hand, if the spontaneous self-referential processing account is true, then there will be an interaction between the two factors, i.e., the prioritization effect exhibits different patterns for self- and other-referential conditions. To test the interaction, we calculated the difference of difference: $(good - neutral)_{self}$ vs. $(good - neutral)_{other}$. We then tested the difference of difference with SEXIT approach.
+We tested the modulation effect of self-referential processing by examining the interaction between moral character and self-referential process for the three-level Bayesian hierarchical model of experiments 3a, 3b, and 6b. More specifically, we tested two possible explanations for the prioritization of good character: the valence effect alone or an interaction between the valence effect and the self-referential process. If the former is correct, then there will be no interaction between moral character and self-referential processing, i.e., the prioritization effect exhibits a similar pattern for both self- and other-referential conditions. On the other hand, if the spontaneous self-referential processing account is true, then there will be an interaction between the two factors, i.e., the prioritization effect exhibits different patterns for self- and other-referential conditions. To test the interaction, we calculated the posterior distribution of the difference of difference: $(good - neutral)_{self}$ vs. $(good - neutral)_{other}$. We then tested the difference of difference with SEXIT framework.
 
 #### Spontaneous binding between the self and good character
-For data from experiments 4a and 4b, we further examined whether the self-referential processing for moral characters is spontaneous (i.e., whether the good character is spontaneously bound with the self). For experiment 4a, if there exists a spontaneous binding between self and good character, there should be an interaction between moral character and self-referential processing. More specifically, we tested the posteriors of $good_{self} - neutral_{self}$ and $good_{other} - neutral_{other}$, as well as the difference between them. For experiment 4b, if there exists a spontaneous binding between self and good character, then, there will be a self-other difference for some moral character conditions but not for other moral character conditions. More specifically, we tested the posteriors of $good_{self} - good_{other}$, $neutral_{self} - neutral_{other}$, and $bad_{self} - bad_{other}$ as well as the difference between them. 
+For data from experiments 4a and 4b, we further examined whether the self-referential processing for moral characters is spontaneous (i.e., whether the good character is spontaneously bound with the self). For experiment 4a, if there exists a spontaneous binding between self and good character, there should be an interaction between moral character and self-referential processing. More specifically, we tested the posterior distributions of $good_{self} - neutral_{self}$ and $good_{other} - neutral_{other}$, as well as the difference between these differences with the SEXIT framework. For experiment 4b, if there exists a spontaneous binding between self and good character, then, there will be a self-other difference for some moral character conditions but not for other moral character conditions. More specifically, we tested the posteriors of $good_{self} - good_{other}$, $neutral_{self} - neutral_{other}$, and $bad_{self} - bad_{other}$ as well as the difference between them with SEXIT framework. 
