--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -1,6 +1,6 @@
 ---
 title             : "The good person is me: Spontaneous self-referential process prioritizes moral character in perceptual matching"
-shorttitle        : "Priorization of good character is self-referential"
+shorttitle        : "The good person is self-related"
 
 author: 
   - name          : "Hu Chuan-Peng"
@@ -28,11 +28,11 @@ authornote: |
   Authors contriubtion: HCP, JS, & KP design the study, HCP collected the data, HCP analyzed the data and drafted the manuscript. All authors read and agreed upon the current version of the manuscripts.
 
 abstract: |
- Moral character is central to social evaluation and moral judgment. However, whether moral character information is prioritized in perceptual decision-making was debated. Here we investigated the effect of moral character on perceptual decision-making through an associative learning task. Participants first learned associations between different geometric shapes and moral characters and then performed a simple perceptual matching task. Across five experiments (N = 192 ), we found a robust prioritization effect of good character-related information, i.e., participants responded faster and more accurately to shapes that were associated with good characters than shapes associated with neutral or bad characters. We then examine whether the prioritization of good character was due to valence alone or an interaction between valence and self-reference. Data from three experiments (N = 108) demonstrated that the prioritization effect of good character was robust when the good character referred to the self but weak or non-exist when it referred to others. Additional two experiments (N = 104) further revealed that the mutual facilitation between good character and self-reference occurred even when one of them was task-irrelevant. Together, these results suggested a spontaneous self-referential process as a mechanism of the prioritization effect of good character.
+ Moral character is central to social evaluation and moral judgment. People can infer moral character from a human face in less than one second. However, whether moral character-related information is prioritized, as compared to neutral characters, in perceptual decision-making was debated. Here we investigated the effect of moral character on perceptual decision-making through an associative learning task. Participants first learned associations between different geometric shapes and moral characters and then performed a simple perceptual matching task. Across five experiments (N = 192), we found a robust prioritization effect of good character-related shapes, i.e., participants responded faster and more accurately to shapes that were associated with good characters than shapes associated with neutral or bad characters. We then examine whether the prioritization of good character was due to valence alone or an interaction between valence and self-referential processing. Results of three experiments (N = 108) demonstrated that the prioritization effect of good character was robust when referred to the self but weak or non-exist when referred to others. Additional two experiments (N = 104) further revealed that the mutual facilitation between good character and the self occurred even when one of them was task-irrelevant. Together, these results not only provide evidence for a robust prioritization effect of good character but also the crucial role of spontaneous self-referential process in the prioritization of good character.
   
  <!-- https://tinyurl.com/ybremelq -->
   
-keywords          : "Perceptual decision-making, Self positivity bias, moral character"
+keywords          : "Perceptual matching, Self positivity bias, moral character"
 wordcount         : "X"
 
 bibliography      : 
@@ -100,11 +100,11 @@ Summary:
         our results
 -->
 
-Is moral information prioritized in perception? This question has evoked much heat a few years ago but remains unsolved. On the one hand, morality is a basic dimension in social evaluation [@dunbar_gossip_2004; @ellemers_morality_2018; @goodwin_moral_2014; @goodwin_moral_2015], this importance should grant moral information more salient than morally neutral information and thus prioritized when the attentional resource is limited. This logic is similar to other stimuli that are also important to humans, e.g., threatening stimuli [e.g., @ohman_face_2001], rewards [@anderson_value_2011], or self-related stimuli [@sui_self_attention_2019]. Indeed, previous studies reported bad characters are prioritized in visual processing [@anderson_visual_2011; @eiserbeck_visual_2020], suggesting that bad people are detected faster than neutral or good people. On the other hand, there is evidence against the view that morally bad information is prioritized in perception. First, researchers reported positive bias in processing moral-related information. For example, @shore_social_2013 found that faces with positive interaction in a trust game were prioritized in the pre-attentive process. Second, the negative bias in perceiving moral information is not robust [@stein_no_2017]. Third, the mechanism underlying the reported negative bias in processing moral-related information is debated [@firestone_cognition_2015; @firestone_moral_2016; @jussim_interpretations_2016]. In short, while the importance of morality is widely recognized, whether moral information is prioritized in perceptual decision-making is still an open question. Here we manipulated the moral character by an associated learning task and investigated whether immediately acquired moral character information is prioritized in a perceptual matching task.
- 
-If moral character information is indeed prioritized, the next question is how? Previous studies explain the effect based on valence. For example, the negative bias toward moral information is explained by aligning moral information with affective stimuli and threat detection was supposed to be the potential mechanism [@anderson_value_2011]. The positive bias toward moral information, on the other hand, is explained by value-based attention [@shore_social_2013]. However, these explanations often ignore the fact the value is subjective *per se* [@juechems_where_2019]. Merely associating with the self can prioritize the stimuli in perception, attention, working memory, and long-term memory [@sui_self_attention_2019; @sui_tics_2015]. Here, we explicitly included self-relevance in our experimental design and tested whether the prioritization of moral character is modulated by self-relevance. We adopted an associative learning task, or self-tagging task, which has been widely used in studying the self-relevance effect. It is based on the well-established fact that humans can quickly learn the associations between symbols via language and change subsequent behaviors accordingly. This associative learning is widely used in aversive learning and value-based learning [@atlas_instructions_2022; @deltomme_instructed_2018]. By explicitly instructing participants on which moral character is self-referencing and which is not, we can test whether the prioritization of moral character is by valence *per se* or by the self-referential of moral valence. 
+Morality is one of the basic dimensions in social evaluation [@dunbar_gossip_2004; @ellemers_morality_2018; @goodwin_moral_2014]. People can form an impression of others’ moral character in less than one second [@willis_first_2006]. It is intriguing whether moral character-related information is prioritized in perception. This question evoked much heat a few years ago but remains unsolved. Previous studies have found that stimuli that are also important to humans, e.g., threatening stimuli [e.g., @ohman_face_2001], rewards [@anderson_value_2011], or self-related stimuli [@sui_self_attention_2019], are prioritized when attentional resources are limited. Given the importance of morality in social life, moral information should be more salient than morally neutral information and thus be prioritized. Indeed, a few studies reported that bad characters are prioritized in visual processing [@anderson_visual_2011; @eiserbeck_visual_2020], suggesting that bad people are detected faster than neutral or good people. However, results that morally bad information is prioritized are debated. First, the opposite effect, positive bias, was also reported. For example, @shore_social_2013 found that faces with positive interaction in a trust game were prioritized in the pre-attentive process. Second, the robustness of previous results is questioned [eg., @stein_no_2017]. Third, the prioritization effect of morality might be confounded with other factors [@firestone_cognition_2015; @firestone_moral_2016; @jussim_interpretations_2016]. In short, while the importance of morality is widely recognized, whether moral information is prioritized in perceptual decision-making is still an open question. 
 
-We address these questions by investigating how immediately acquired moral character information modulates the processing of neutral geometric shapes in a perceptual matching task. Unlike previous studies relies on faces or words as materials, stimuli used in the social associative task are geometric shapes, which acquire moral meaning before the perceptual matching task. Moreover, associations between shapes and different labels of moral characters are counter-balanced between participants, thus eliminating confounding effects by stimuli. Also, because we only used a few stimuli and they were repeatedly presented during the task, the results can not be explained by semantic priming [@unkelbach_chapter_2020], which is the center of the debate on previous results [@gantman_moral_2015; @gantman_see_2016; @firestone_cognition_2015; @Firestone_2016_BBS; @jussim_interpretations_2016]. We examined whether participants’ performance in the perceptual matching task was altered by the immediately acquired moral character of the shapes — in particular, whether the shapes associated with good or bad character are prioritized. We found a robust effect that shapes associated with good character are prioritized in the perceptual matching task. In a series of control experiments, we confirmed that moral content drove the prioritization effect, instead of other factors such as familiarity. In the subsequent experiments, we further tested whether the prioritization of moral character was caused by the valence of moral character alone or the interaction between valence and self-referential processing and found that only shapes associated with both good character and the self are prioritized, suggesting spontaneous moral self-referential as a novel mechanism underlying prioritization of good character in perceptual decision-making.
+Here, we conducted a series of experiments to examine the prioritization effect of moral character. We investigated how immediately acquired moral character information modulates the processing of neutral geometric shapes in a perceptual matching task. The associative learning task is based on the well-established fact that humans can quickly learn the associations between symbols and change subsequent behaviors accordingly. This associative learning task is widely used in aversive learning and value-based learning [@atlas_instructions_2022; @deltomme_instructed_2018]. Unlike previous studies relies on faces or words as materials, stimuli used in the social associative task are geometric shapes, which acquire moral meaning before the perceptual matching task. Moreover, associations between shapes and different labels of moral characters are counter-balanced between participants, thus eliminating confounding effects by stimuli. Also, because we repeatedly presented a few pairs of shapes and labels to participants during the task, our results can not be explained by semantic priming [@unkelbach_chapter_2020], which is the center of the debate on previous results [@gantman_moral_2015; @gantman_see_2016; @firestone_cognition_2015; @Firestone_2016_BBS; @jussim_interpretations_2016]. We found a robust effect that shapes associated with good character are prioritized in the perceptual matching task. In a series of control experiments, we further confirmed that it is the moral content that drove the prioritization effect, instead of other factors such as familiarity. 
+ 
+If moral character information is prioritized, the next question is how? Previous studies explain the effect based on valence. For example, the negative bias toward moral information is explained by aligning moral information with affective stimuli and threat detection was supposed to be the potential mechanism [@anderson_value_2011]. The positive bias toward moral information, on the other hand, is explained by value-based attention [@shore_social_2013]. However, these explanations often ignore the fact the value is subjective *per se* [@juechems_where_2019]. Merely associating with the self can prioritize the stimuli in perception, attention, working memory, and long-term memory [@sui_self_attention_2019; @sui_tics_2015]. Here, we introduced self-relevance in the social associative learning task. In the experiment, we explicitly instructed participants on which moral character is self-referencing and which is not. In this way, we tested whether the prioritization of moral character is by valence *per se* or by the self-referential of moral valence. In the subsequent experiments, we further tested the interaction between valence and self-referential processing more implicitly. The results revealed a mutual facilitation effect of good character and the self, suggesting spontaneous moral self-referential as a novel mechanism underlying the prioritization of good character in perceptual decision-making.
 
 <!-- 
 we attempted to distinguish these two possibilities by a social associative learning task in which physical features had minimal influences — participants performed a perceptual matching task after associated different moral characters (good, neutral, and bad) with different geometric shapes. If there is a positivity effect, there should be an advantage for shapes associated with good character over shapes associated with neutral or bad shapes. If there is a negativity effect, the advantage should be occur on shapes associated with bad characters. The first four experiments and two additional follow-up experiments provided strong evidence for good character effect in the current paradigm.
@@ -426,7 +426,7 @@ ul_d_m1_bad <- df_m1_std_fixed_effect$CI_high[df_m1_std_fixed_effect$Valence == 
 bayestestR::sexit(df_m1_plot_sdt_diff_wide[, 9:10])
 ```
 
-For the *d* prime, results from the Bayesian model revealed a robust effect of moral character. Shapes associated with good characters ("good person", "kind person" or a name associated with good behaviors) have higher sensitivity (median = `r med_d_m1_good`, 95% HDI = [`r ll_d_m1_good` `r ul_d_m1_good`]) than shapes associated with neutral characters (median = `r med_d_m1_neut`, 95% HDI = [`r ll_d_m1_neut` `r ul_d_m1_neut`]), the difference ($median_{diff}$ = 0.31, 95% HDI [0, 0.62]) has a 97.31% probability of being positive (> 0), 94.91% of being significant (> 0.05). But we did not find difference between shapes associated with bad characters (median = `r med_d_m1_bad`, 95% HDI = [`r ll_d_m1_bad` `r ul_d_m1_bad`]) and neutral character, the difference ($median_{diff}$ = 0.05, 95% HDI  [-0.27, 0.38]) only has a 60.56% probability of being positive (> 0), 49.34% of being significant (> 0.05).
+For the *d* prime, results from the Bayesian model revealed a robust effect of moral character. Shapes associated with good characters ("good person", "kind person" or a name associated with good behaviors) have higher sensitivity (median = `r med_d_m1_good`, 95% HDI = [`r ll_d_m1_good` `r ul_d_m1_good`]) than shapes associated with neutral characters (median = `r med_d_m1_neut`, 95% HDI = [`r ll_d_m1_neut` `r ul_d_m1_neut`]), the difference ($median_{diff}$ = 0.31, 95% HDI [0, 0.62]) has a 97.31% probability of being positive (> 0), 94.91% of being significant (> 0.05). But we did not find a difference between shapes associated with bad characters (median = `r med_d_m1_bad`, 95% HDI = [`r ll_d_m1_bad` `r ul_d_m1_bad`]) and neutral character, the difference ($median_{diff}$ = 0.05, 95% HDI  [-0.27, 0.38]) only has a 60.56% probability of being positive (> 0), 49.34% of being significant (> 0.05).
 
 ```{r first meta rt, echo=FALSE, results='hide', warning=FALSE}
 # have a look at a few participants' data
@@ -673,7 +673,7 @@ p_rt1 + p_dprime1 +
 
 The results from reaction times data also found a robust effect of moral character for both match trials (see figure \@ref(fig:plot-bayes-meta-1) C) and nonmatch trials (**see supplementary materials**). For match trials, shapes associated with good characters were faster (median = `r med_rt_m_m1_good` ms, 95% HDI = [`r ll_rt_m_m1_good` `r ul_rt_m_m1_good`]) than shapes associated with neutral characters (median = `r med_rt_m_m1_neut` ms, 95% HDI = [`r ll_rt_m_m1_neut` `r ul_rt_m_m1_neut`]), the effect ($median_{diff}$ =  -44, 95% HDI  [-67, -24]) has a 99.94% probability of being negative (< 0), 99.94% of being significant (< -0.05). We also found that RTs to shapes associated with bad characters (median = `r med_rt_m_m1_bad` ms, 95% HDI = [`r ll_rt_m_m1_bad` `r ul_rt_m_m1_bad`]) were slower as compared to the neutral character, the effect ($median_{diff}$ = 17, 95% HDI  [-6, 36]) has a 93.58% probability of being positive (> 0), 93.55% of being significant (> 0.05).
 
-For the nonmatch trials, we found similar pattern but much smaller effect size. Shapes associated with good characters (median = `r med_rt_nm_m1_good` ms, 95% HDI = [`r ll_rt_nm_m1_good` `r ul_rt_nm_m1_good`]) were faster than shapes associated with neutral characters (median = `r med_rt_nm_m1_neut` ms, 95% HDI = [`r ll_rt_nm_m1_neut` `r ul_rt_nm_m1_neut`]), the difference ($median_{diff}$ = -18, 95% HDI  [-27, -8]) has a 99.91% probability of being negative (< 0), 99.91% of being significant (< -0.05). In contrast, the shapes associated with bad characters (median = `r med_rt_nm_m1_bad` ms, 95% HDI = [`r ll_rt_nm_m1_bad` `r ul_rt_nm_m1_bad`]) were slower than shapes associated with neutral characters, the effect ($median_{diff}$ = 5, 95% HDI  [-3, 13]) has a 92.43% probability of being positive (> 0), 92.31% of being significant (> 0.05).
+For the nonmatch trials, we found a similar pattern but a much smaller effect size. Shapes associated with good characters (median = `r med_rt_nm_m1_good` ms, 95% HDI = [`r ll_rt_nm_m1_good` `r ul_rt_nm_m1_good`]) were faster than shapes associated with neutral characters (median = `r med_rt_nm_m1_neut` ms, 95% HDI = [`r ll_rt_nm_m1_neut` `r ul_rt_nm_m1_neut`]), the difference ($median_{diff}$ = -18, 95% HDI  [-27, -8]) has a 99.91% probability of being negative (< 0), 99.91% of being significant (< -0.05). In contrast, the shapes associated with bad characters (median = `r med_rt_nm_m1_bad` ms, 95% HDI = [`r ll_rt_nm_m1_bad` `r ul_rt_nm_m1_bad`]) were slower than shapes associated with neutral characters, the effect ($median_{diff}$ = 5, 95% HDI  [-3, 13]) has a 92.43% probability of being positive (> 0), 92.31% of being significant (> 0.05).
 
 ```{r model comp for rt, eval = FALSE, echo=FALSE, results='hide' }
 #### model comparison etc, will be in supplementary materials
@@ -938,7 +938,7 @@ test_res_sdt_ms <- bayestestR::sexit(df_ms_sdt_m1_plot_diff[5:13])
 test_res_sdt_ms
 ```
 
-For the *d* prime, we found an interaction between the moral valence and self-referential processing: the good-neutral differences are larger for the self-referential condition than for the other-referential condition: The difference ($median_{diff}$ = 0.48, 95% HDI [-0.62, 1.65]) has a 93.04% probability of being positive (> 0), 91.92% of being significant (> 0.05). However, the bad-neutral differences ($median_{diff}$ = 0.0087, 95% HDI [-0.96, 1.00]) only has a 51.85% probability of being positive (> 0), 41.29% of being significant (> 0.05). Further analyses revealed that the prioritization effect of good character (as compared to neutral) only appeared for self-referential conditions but not other-referential conditions. The estimated *d* prime for good-self was greater than neutral-self ($median_{diff}$ = 0.54, 95% HDI [-0.30, 1.41]), with a 95.99% probability of being positive (> 0), 95.36% of being significant (> 0.05). The differences between bad-self and neutral-self, good-other and neutral-other, and bad-other and neutral-other are all centered around zero (see Figure \@ref(fig:plot-bayes2), B, D). 
+For the *d* prime, we found an interaction between the moral valence and self-referential processing: the good-neutral differences are larger for the self-referential condition than for the other-referential condition: The difference ($median_{diff}$ = 0.48, 95% HDI [-0.62, 1.65]) has a 93.04% probability of being positive (> 0), 91.92% of being significant (> 0.05). However, the bad-neutral differences ($median_{diff}$ = 0.0087, 95% HDI [-0.96, 1.00]) only have a 51.85% probability of being positive (> 0), 41.29% of being significant (> 0.05). Further analyses revealed that the prioritization effect of good character (as compared to neutral) only appeared for self-referential conditions but not other-referential conditions. The estimated *d* prime for good-self was greater than neutral-self ($median_{diff}$ = 0.54, 95% HDI [-0.30, 1.41]), with a 95.99% probability of being positive (> 0), 95.36% of being significant (> 0.05). The differences between bad-self and neutral-self, good-other and neutral-other, and bad-other and neutral-other are all centered around zero (see Figure \@ref(fig:plot-bayes2), B, D).
 
 ```{r second meta rt, echo=FALSE, results='hide', warning=FALSE}
 # fit a three-level hierarchical model for RT, didn't specify the prior, lognormal, dummy coding, both match and nonmatch trials
@@ -1162,9 +1162,9 @@ p_ms_rt1 + p_ms_dprime1 +
         # p_ms_rt1_diff_id + p_ms_dprime1_diff_id + 
 ```
 
-For the RTs of matched trials, we also found an interaction between moral valence and self-referential processing: the good-neutral differences were larger for the self- than the other-referential conditions ($median_{diff}$ = -148, 95% HDI [-413, 73]) has a 96.05% probability of being negative (< 0), 96.05% of being significant (< -0.05). However, this pattern was much weaker for bad-neutral differences ($median_{diff}$ = -47, 95% HDI [-280, 182]) has a 79.91% probability of being negative (< 0), 79.88% of being significant (< -0.05). Bayes analyses revealed a robust good-self prioritization effect as compared to neutral-self ($median_{diff}$ = -59, 95% HDI [-115, -22]) has a 98.87% probability of being negative (< 0), 98.87% of being significant (< -0.05)) and good-other ($median_{diff}$ = -109, 95% HDI [-227, -31]) has a 98.65% probability of being negative (< 0), 98.65% of being significant (< -0.05)) conditions. Similar to the results of *d'*, we found that participants responded slower for both good character than for the neutral character when they referred to others, $median_{diff}$ = 85.01, 95% HDI [-112, 328]) has a 92.16% probability of being positive (> 0), 92.15% of being significant (> 0.05). A similar pattern was also found for bad character when refereed to others: bad-other was responded slower than neutral-other,  $median_{diff}$ = 44, 95% HDI [-146, 268]) has a 80.03% probability of being positive (> 0), 79.99% of being significant (> 0.05). See Figure \@ref(fig:plot-bayes2).
+For the RTs of matched trials, we also found an interaction between moral valence and self-referential processing: the good-neutral differences were larger for the self- than the other-referential conditions ($median_{diff}$ = -148, 95% HDI [-413, 73]) has a 96.05% probability of being negative (< 0), 96.05% of being significant (< -0.05). However, this pattern was much weaker for bad-neutral differences ($median_{diff}$ = -47, 95% HDI [-280, 182]) has a 79.91% probability of being negative (< 0) and 79.88% of being significant (< -0.05). Bayes analyses revealed a robust good-self prioritization effect as compared to neutral-self ($median_{diff}$ = -59, 95% HDI [-115, -22]) has a 98.87% probability of being negative (< 0) and 98.87% of being significant (< -0.05)) and good-other ($median_{diff}$ = -109, 95% HDI [-227, -31]) has a 98.65% probability of being negative (< 0) and 98.65% of being significant (< -0.05)) conditions. Similar to the results of *d'*, we found that participants responded slower for both good character than for the neutral character when they referred to others, $median_{diff}$ = 85.01, 95% HDI [-112, 328]) has a 92.16% probability of being positive (> 0) and 92.15% of being significant (> 0.05). A similar pattern was also found for the bad character when referred to others: bad-other responded slower than neutral-other,  $median_{diff}$ = 44, 95% HDI [-146, 268]) has an 80.03% probability of being positive (> 0) and 79.99% of being significant (> 0.05). See Figure \@ref(fig:plot-bayes2).
 
-These results suggested that the prioritization of good character is not solely driven by the valence of moral character. Instead, the self-referential processing modulated the prioritization of good character: good character was prioritized only when it was self-referential. When the moral character was other-referential, responses to both good and bad characters were slowed down. 
+These results suggested that the prioritization of good character is not solely driven by the valence of moral character. Instead, the self-referential processing modulated the prioritization of good character: good character was prioritized only when it was self-referential. When the moral character was other-referential, responses to both good and bad characters were slowed down.  
 
 ## Spontaneous binding between the good character and the self
 
@@ -1435,7 +1435,7 @@ test_res_sdt_4a <- bayestestR::sexit(df_exp4a_sdt_m1_plot_diff_wide[, c(4, 7, 13
 test_res_sdt_4a
 ```
 
-More importantly, we found evidence, albeit weak, that task-irrelevant moral character also played a role. For shapes associated with “self”, *d'* was greater when shapes had a good character inside (median = `r rep_m_d_exp4a_good_s`, 95% HDI [`r rep_ll_d_exp4a_good_s` `r rep_ul_d_exp4a_good_s`]) than shapes that have neutral character (median = `r rep_m_d_exp4a_neut_s`, 95% HDI [`r rep_ll_d_exp4a_neut_s` `r rep_ul_d_exp4a_neut_s`]), the difference (median = 0.08, 95% HDI [-0.10, 0.27]) has a 81.60% probability of being positive (> 0), 64.33% of being significant (> 0.05). For shapes associated with “other”, the pattern reversed: *d* prime was smaller when shapes had a good character inside (median = `r rep_m_d_exp4a_good_o`, 95% HDI [`r rep_ll_d_exp4a_good_o` `r rep_ul_d_exp4a_good_o`]) than had neutral (median = `r rep_m_d_exp4a_neut_o`, 95% HDI [`r rep_ll_d_exp4a_neut_o` `r rep_ul_d_exp4a_neut_o`]), the difference (median = -0.09, 95% HDI [-0.25, 0.05]) has a 89.03% probability of being negative (< 0), 71.38% of being significant (< -0.05). The difference between theses two effects (median = 0.18, 95% HDI [-0.06, 0.43]) has a 92.88% probability of being positive (> 0), 85.08% of being significant (> 0.05). See Figure \@ref(fig:plot-exp4-all).
+More importantly, we found evidence, albeit weak, that task-irrelevant moral character also played a role. For shapes associated with “self”, *d'* was greater when shapes had a good character inside (median = `r rep_m_d_exp4a_good_s`, 95% HDI [`r rep_ll_d_exp4a_good_s` `r rep_ul_d_exp4a_good_s`]) than shapes that have neutral character (median = `r rep_m_d_exp4a_neut_s`, 95% HDI [`r rep_ll_d_exp4a_neut_s` `r rep_ul_d_exp4a_neut_s`]), the difference (median = 0.08, 95% HDI [-0.10, 0.27]) has an 81.60% probability of being positive (> 0), 64.33% of being significant (> 0.05). For shapes associated with “other”, the pattern reversed: *d* prime was smaller when shapes had a good character inside (median = `r rep_m_d_exp4a_good_o`, 95% HDI [`r rep_ll_d_exp4a_good_o` `r rep_ul_d_exp4a_good_o`]) than had neutral (median = `r rep_m_d_exp4a_neut_o`, 95% HDI [`r rep_ll_d_exp4a_neut_o` `r rep_ul_d_exp4a_neut_o`]), the difference (median = -0.09, 95% HDI [-0.25, 0.05]) has an 89.03% probability of being negative (< 0), 71.38% of being significant (< -0.05). The difference between these two effects (median = 0.18, 95% HDI [-0.06, 0.43]) has a 92.88% probability of being positive (> 0), 85.08% being significant (> 0.05). See Figure \@ref(fig:plot-exp4-all).
 
 ```{r 4a_BGLMM_rt, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
 exp_name <- '4a'
@@ -1686,7 +1686,7 @@ p2 <- (p_exp4a_rt_diff_val + p_exp4a_dprime1_diff_val) + plot_layout(nrow = 1, b
         # p3 +  plot_layout(nrow = 3) 
 ```
 
-A similar pattern was found for RTs in matched trials. For the “self” condition, when a good character was presented inside the shapes, the RTs (median = `r rep_m_exp4a_rt_good_s`, 95% HDI [`r rep_ll_exp4a_rt_good_s` `r rep_ul_exp4a_rt_good_s`]) were faster than when a neutral character (median = `r rep_m_exp4a_rt_neut_s`, 95% HDI [`r rep_ll_exp4a_rt_neut_s` `r rep_ul_exp4a_rt_neut_s`]) were inside, the effect (median = -7.87, 95% HDI [-17.49, 2.00]) has a 94.55% probability of being negative (< 0), 94.50% of being significant (< -0.05), and 93.97% of being large (< -0.30). In contrast, RTs for shapes associated with good character inside (median = `r rep_m_exp4a_rt_good_o`, 95% HDI [`r rep_ll_exp4a_rt_good_o` `r rep_ul_exp4a_rt_good_o`]) were slower than those with neutral character (median =  `r rep_m_exp4a_rt_neut_o`, 95% HDI [`r rep_ll_exp4a_rt_neut_o` `r rep_ul_exp4a_rt_neut_o`]) inside, the effect (median = 11.64, 95% HDI [-3.99, 27.83]) has a 93.00% probability of being positive (> 0), 92.83% of being significant (> 0.05), and 92.40% of being large (> 0.30). The difference between the effects (median = -19.46, 95% HDI [-42.93, 3.72]) has a 94.90% probability of being negative (< 0), 94.88% of being significant (< -0.05), and 94.58% of being large (< -0.30).
+A similar pattern was found for RTs in matched trials. For the “self” condition, when a good character was presented inside the shapes, the RTs (median = `r rep_m_exp4a_rt_good_s`, 95% HDI [`r rep_ll_exp4a_rt_good_s` `r rep_ul_exp4a_rt_good_s`]) were faster than when a neutral character (median = `r rep_m_exp4a_rt_neut_s`, 95% HDI [`r rep_ll_exp4a_rt_neut_s` `r rep_ul_exp4a_rt_neut_s`]) was inside, the effect (median = -8, 95% HDI [-17, 2]) has a 94.55% probability of being negative (< 0) and 94.50% of being significant (< -0.05). In contrast, RTs for shapes associated with good character inside (median = `r rep_m_exp4a_rt_good_o`, 95% HDI [`r rep_ll_exp4a_rt_good_o` `r rep_ul_exp4a_rt_good_o`]) were slower than those with neutral character (median =  `r rep_m_exp4a_rt_neut_o`, 95% HDI [`r rep_ll_exp4a_rt_neut_o` `r rep_ul_exp4a_rt_neut_o`]) inside, the effect (median = 12, 95% HDI [-4, 28]) has a 93.00% probability of being positive (> 0) and 92.83% of being significant (> 0.05). The difference between the effects (median = -19, 95% HDI [-43, 4]) has a 94.90% probability of being negative (< 0) and 94.88% of being significant (< -0.05).
 
 In experiment 4b, where moral characters were task-relevant and “self” vs “other” were task-irrelevant, we found a main effect of moral character: performance for shapes associated with good characters was better than other-related conditions on both *d'* and reaction times. This pattern, again, shows a robust prioritization effect of good character.
 ```{r 4b_BGLMM_sdt, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
@@ -1833,7 +1833,7 @@ test_res_sdt_4b <- bayestestR::sexit(df_exp4b_sdt_m1_plot_diff_wide[, c(10, 11, 
 test_res_sdt_4b
 ```
 
-Most importantly, we found evidence that task-irrelevant labels, “self” or “other”, also played a role. For shapes associated with good character, the *d* prime was greater when shapes had a "self" inside than with "other" inside ($mean_{diff}$ = 0.14, 95% HDI [-0.05, 0.34]) has a 92.35% probability of being positive (> 0), 81.80% of being significant (> 0.05). However, the difference did not occur when the target shape where associated with "neutral" ($mean_{diff}$ = 0.04, 95% HDI [-0.13, 0.22]) has a 67.20% probability of being positive (> 0), 44.80% of being significant (> 0.05). Neither for the "bad" person condition: $mean_{diff}$  = 0.10, 95% HDI [-0.16, 0.37]) has a 77.03% probability of being positive (> 0), 64.62% of being significant (> 0.05). 
+Most importantly, we found evidence that task-irrelevant labels, “self” or “other”, also played a role. For shapes associated with good character, the *d* prime was greater when shapes had a "self" inside than with "other" inside ($mean_{diff}$ = 0.14, 95% HDI [-0.05, 0.34]) has a 92.35% probability of being positive (> 0) and 81.80% of being significant (> 0.05). However, the difference did not occur when the target shape where associated with "neutral" ($mean_{diff}$ = 0.04, 95% HDI [-0.13, 0.22]) and has a 67.20% probability of being positive (> 0) and 44.80% of being significant (> 0.05). Neither for the "bad" person condition: $mean_{diff}$  = 0.10, 95% HDI [-0.16, 0.37]) has a 77.03% probability of being positive (> 0) and 64.62% of being significant (> 0.05). 
 
 ```{r 4b_BGLMM_rt, echo=FALSE, results='hide', warning=FALSE, message=FALSE}
 exp_name <- '4b'
@@ -1994,7 +1994,7 @@ p_exp4a_rt1 + exp4a_sdt_p + p_exp4b_rt1 + exp4b_sdt_p + p_exp4a_rt_diff_val + p_
 
 ```
 
-The same trend appeared for the RT data. For shapes associated with good character, having a "self" inside shapes reduced the reaction times as compared to having an "other" inside the shapes ($mean_{diff}$ = -55.10, 95% HDI [-75.27, -35.11]) has a 100% probability of being negative (< 0), 100.00% of being significant (< -0.05). However, when the shapes were associated neutral character, having a "self" inside shapes increased the RTs: $mean_{diff}$ = 10.88, 95% HDI [0.67, 20.84]) has a 98.20% probability of being positive (> 0), 98.15% of being significant (> 0.05). While having "self" slightly increased the RT than having "other" inside the shapes for the bad character: $mean_{diff}$ = 5.39, 95% HDI [-16.59, 27.37]) has a 69.45% probability of being positive (> 0), 69.27% of being significant (> 0.05), See Figure \@ref(fig:plot-exp4-all).
+The same trend appeared for the RT data. For shapes associated with good character, having a "self" inside shapes reduced the reaction times as compared to having an "other" inside the shapes ($mean_{diff}$ = -55, 95% HDI [-75, -35]) has a 100% probability of being negative (< 0) and 100.00% of being significant (< -0.05). However, when the shapes were associated with the neutral character, having a "self" inside shapes increased the RTs: $mean_{diff}$ = 11, 95% HDI [1, 21]) has a 98.20% probability of being positive (> 0) and 98.15% of being significant (> 0.05). While having "self" slightly increased the RT than having "other" inside the shapes for the bad character: $mean_{diff}$ = 5, 95% HDI [-17, 27]) has a 69.45% probability of being positive (> 0) and 69.27% of being significant (> 0.05), See Figure \@ref(fig:plot-exp4-all).
 
 # Discussion
 
