--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -262,22 +262,20 @@ In most of these experiments, participants were also asked to fill out questionn
 ExpID & \multicolumn{1}{c}{Time} & \multicolumn{1}{c}{Location} & \multicolumn{1}{c}{N} & \multicolumn{1}{c}{n.of.trials} & \multicolumn{1}{c}{Self.ref} & \multicolumn{1}{c}{Stim.for.Morality} & \multicolumn{1}{c}{Presenting.order}\\
 \midrule
 Exp\_1a\_1 & 2014-04 & Beijing & 38 (35) & 60 & NA & words & Simultaneously\\
-Exp\_1a\_2 & 2017-04 & Wenzhou & 18 (16) & 60 & NA & words & Simultaneously\\
-Exp\_1b\_1 & 2014-10 & Beijing & 39 (27) & NA & NA & words & Simultaneously\\
-Exp\_1b\_2 & 2017-04 & Wenzhou & 33 (25) & NA & NA & words & Simultaneously\\
-Exp\_1c & 2014-10 & Beijing & 23 (23) & NA & NA & descriptions & Simultaneously\\
-Exp\_2 & 2014-05 & Beijing & 35 (34) & NA & NA & words & Sequentially\\
-Exp\_3a & 2014-11 & Beijing & 38 (35) & NA & explicit & words & Simultaneously\\
-Exp\_3b & 2017-04 & Wenzhou & 61 (56) & NA & explicit & words & Simultaneously\\
-Exp\_4a\_1 & 2015-06 & Beijing & 32 (29) & NA & implicit & words & Simultaneously\\
-Exp\_4a\_2 & 2017-04 & Wenzhou & 32 (30) & NA & implicit & words & Simultaneously\\
-Exp\_4b\_1 & 2015-10 & Beijing & 34 (32) & NA & implicit & words & Simultaneously\\
-Exp\_4b\_2 & 2017-04 & Wenzhou & 19 (13) & NA & implicit & words & Simultaneously\\
-Exp\_5 & 2016-01 & Beijing & 43 (38) & NA & NA & words & Simultaneously\\
-Exp\_6a & 2014-12 & Beijing & 24 (24) & NA & NA & words & Sequentially\\
-Exp\_6b & 2016-01 & Beijing & 23 (22) & NA & explicit & words & Sequentially\\
-Exp\_7a & 2016-07 & Beijing & 35 (29) & NA & explicit & words & Simultaneously\\
-Exp\_7b & 2018-05 & Beijing & 46 (42) & NA & explicit & words & Simultaneously\\
+Exp\_1a\_2 & 2017-04 & Wenzhou & 18 (16) & 120 & NA & words & Simultaneously\\
+Exp\_1b\_1 & 2014-10 & Beijing & 39 (27) & 60 & NA & words & Simultaneously\\
+Exp\_1b\_2 & 2017-04 & Wenzhou & 33 (25) & 120 & NA & words & Simultaneously\\
+Exp\_1c & 2014-10 & Beijing & 23 (23) & 60 & NA & descriptions & Simultaneously\\
+Exp\_2 & 2014-05 & Beijing & 35 (34) & 60 & NA & words & Sequentially\\
+Exp\_3a & 2014-11 & Beijing & 38 (35) & 60 & explicit & words & Simultaneously\\
+Exp\_3b & 2017-04 & Wenzhou & 61 (56) & 60 & explicit & words & Simultaneously\\
+Exp\_4a\_1 & 2015-06 & Beijing & 32 (29) & 30 & implicit & words & Simultaneously\\
+Exp\_4a\_2 & 2017-04 & Wenzhou & 32 (30) & 60 & implicit & words & Simultaneously\\
+Exp\_4b\_1 & 2015-10 & Beijing & 34 (32) & 60 & implicit & words & Simultaneously\\
+Exp\_4b\_2 & 2017-04 & Wenzhou & 19 (13) & 60 & implicit & words & Simultaneously\\
+Exp\_5 & 2016-01 & Beijing & 43 (38) & 60 & NA & words & Simultaneously\\
+Exp\_6a & 2014-12 & Beijing & 24 (24) & 180 & NA & words & Sequentially\\
+Exp\_6b & 2016-01 & Beijing & 23 (22) & 90 & explicit & words & Sequentially\\
 \bottomrule
 \addlinespace
 \end{tabular}
